Native messaging handshake vulnerability (#32)
* Add client identity key pair and sign transcript.

* Add master-password-gated client keystore for secure extension identity private key storage, separate pairing from handshake, add auth error handling.

* Add tests for updated client signatures and master password and client signature error handling.

* Resolve test and lint issues.

* Remove unused clearUnlockedClientKeypair for clearing client keypair from memory.

* Include client public key in handshake transcript.

* Add protocol tag and session ID binding to prevent replay attacks, validate ephemeral keys, fix base64 handling, prevent concurrent unlock attempts, sanitize error logging, add explicit returns in message handlers.

* Avoid unnecessary re-pairing on unauthenticated desktop and session errors.

* Add constants for crypto functions/algorithms.

* Show toast message when desktop is unavailable instead of showing pairing modal.

* Show modal with retry sync button when desktop is unavailable instead of showing a toast message.

* Update submodules.

---------

Co-authored-by: Chetas Murali <thephantomblu@gmail.com>

--- a/src/locales/en/messages.json
+++ b/src/locales/en/messages.json
@@ -119,6 +119,7 @@
   "phIZif": "Import an existing vault",
   "yCbFTC": "Import existing vault",
   "ZO1rmB": "Import vault",
+  "WWHy4/": "Incorrect password. Please try again.",
   "r7QI34": "Incorrect password. You have {remainingAttempts} attempts before the app locks for 5 minutes.",
   "STIFXV": "Insert Application name",
   "4Km0yF": "Insert country",
@@ -172,6 +173,7 @@
   "jRO5D3": "Only ask for verification when the website requires it.",
   "Z0iqFW": "Open an existing vault or create a new one.",
   "mpXefb": "Open PearPass desktop",
+  "N7qtL+": "Open the desktop app to use the browser extension",
   "+qf+5j": "Paired successfully!",
   "AbBxTM": "Pairing failed",
   "SeIWmp": "Pairing failed. Please verify the desktop app is configured correctly.",
